# simanneal_cpp

./: CMakeLists.txt  LICENSE-3RD-PARTY.txt  README.md
simanneal_cpp/: Annealer.cpp  Annealer.hpp  Annealer.inl  CMakeLists.txt
tests/: CMakeLists.txt  basic_tests.cpp  linear_function_tests.cpp
